--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<link rel="stylesheet" href="style.css">
 <title>jailbreak and cve data base</title>
 <h1>Common Vulnerablites and Exposures Data</h1>
 <ul>
